Refactored Hugging Face Completion Service Settings, removed Request Manager, added Unit Tests